{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 40,
  "lineage": "a4cc6caa-d994-465f-d2b0-ff0e03f91aad",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0edc2b128e9084ac0",
            "association_id": "eipassoc-0fc2bf60e96d62450",
            "domain": "vpc",
            "id": "eipalloc-0edc2b128e9084ac0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ef71415e42685fab",
            "private_dns": "ip-10-0-0-133.ec2.internal",
            "private_ip": "10.0.0.133",
            "public_dns": "ec2-3-94-227-32.compute-1.amazonaws.com",
            "public_ip": "3.94.227.32",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787298256381:internet-gateway/igw-02f94b4e8e28adf60",
            "id": "igw-02f94b4e8e28adf60",
            "owner_id": "787298256381",
            "vpc_id": "vpc-0a14c426c4ff47844"
          },
          "dependencies": [
            "aws_vpc.securedevops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0edc2b128e9084ac0",
            "connectivity_type": "public",
            "id": "nat-0f3b13f5699c7c091",
            "network_interface_id": "eni-0ef71415e42685fab",
            "private_ip": "10.0.0.133",
            "public_ip": "3.94.227.32",
            "subnet_id": "subnet-01227e74590356115"
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_subnet.publicsubnets",
            "aws_vpc.securedevops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787298256381:route-table/rtb-06053ba98dbe90457",
            "id": "rtb-06053ba98dbe90457",
            "owner_id": "787298256381",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f3b13f5699c7c091",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a14c426c4ff47844"
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_nat_gateway.NATgw",
            "aws_subnet.publicsubnets",
            "aws_vpc.securedevops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787298256381:route-table/rtb-0169e5dbec0ce8499",
            "id": "rtb-0169e5dbec0ce8499",
            "owner_id": "787298256381",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02f94b4e8e28adf60",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a14c426c4ff47844"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.securedevops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04dab8ecdb5b0047e",
            "route_table_id": "rtb-06053ba98dbe90457",
            "subnet_id": "subnet-0cc83e5b1f0880e9b"
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_nat_gateway.NATgw",
            "aws_route_table.PrivateRT",
            "aws_subnet.privatesubnets",
            "aws_subnet.publicsubnets",
            "aws_vpc.securedevops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a90cb3c90620bf45",
            "route_table_id": "rtb-0169e5dbec0ce8499",
            "subnet_id": "subnet-01227e74590356115"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.PublicRT",
            "aws_subnet.publicsubnets",
            "aws_vpc.securedevops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787298256381:security-group/sg-05385c235997f30e6",
            "description": "Allow ALL inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05385c235997f30e6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ALL from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "787298256381",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all_traffic"
            },
            "tags_all": {
              "Name": "allow_all_traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a14c426c4ff47844"
          },
          "dependencies": [
            "aws_vpc.securedevops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787298256381:security-group/sg-09d84bbaaa0faa8e5",
            "description": "Allow Database traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09d84bbaaa0faa8e5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ALL from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "rds_sg",
            "name_prefix": "",
            "owner_id": "787298256381",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_rds_traffic"
            },
            "tags_all": {
              "Name": "allow_rds_traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a14c426c4ff47844"
          },
          "dependencies": [
            "aws_vpc.securedevops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787298256381:subnet/subnet-0cc83e5b1f0880e9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.192/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc83e5b1f0880e9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "787298256381",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private"
            },
            "tags_all": {
              "Name": "Private"
            },
            "vpc_id": "vpc-0a14c426c4ff47844"
          },
          "dependencies": [
            "aws_vpc.securedevops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787298256381:subnet/subnet-01227e74590356115",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01227e74590356115",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "787298256381",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public"
            },
            "tags_all": {
              "Name": "Public"
            },
            "vpc_id": "vpc-0a14c426c4ff47844"
          },
          "dependencies": [
            "aws_vpc.securedevops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "securedevops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787298256381:vpc/vpc-0a14c426c4ff47844",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0b1b18a82c2689bb3",
            "default_route_table_id": "rtb-06f0fc416cb65a9ce",
            "default_security_group_id": "sg-007514222349267d2",
            "dhcp_options_id": "dopt-0541ebe23456fa25a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a14c426c4ff47844",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06f0fc416cb65a9ce",
            "owner_id": "787298256381"
          }
        }
      ]
    }
  ]
}